--- a/PROJECT/style.css
+++ b/PROJECT/style.css
@@ -51,7 +51,7 @@ padding: 15px;
 display: inline-block;
 }
 .main-menu>ul>li>a:hover{
-    background-color:lightslategray;
+    background-color:#3586ff;
 }
 
 .drop{
@@ -67,12 +67,12 @@ display: inline-block;
     color: white;
     text-decoration: none;
     padding: 15px;
-    background-color: lightslategray;
+    background-color: #3586ff;
     display: inline-block;
     width: 100%;
 }
 .drop>li>a:hover{
-    background-color: gray;
+    background-color:black;
 }
 .main-menu>ul>li:hover .drop{
     display:block;
@@ -84,17 +84,18 @@ display: inline-block;
 .content-holder{
     display: flex;
     justify-content: space-between;
-    background-color:cadetblue;
-    border-bottom: 1px solid cadetblue;
+    background-color:black;
+    border-bottom: 1px solid black;
 }
 .content-holder .content{
     padding: 25px;
     background-color: white;
     width: 80%;
+    margin-bottom: 40px;
 }
 .content-holder .content h1 ~ h2{
     font-size:1em;
-    color: cadetblue;
+    color: black;
 }
 
 .sidebar{
@@ -117,7 +118,7 @@ display: inline-block;
     text-decoration: none;
 }
 .sidebar .widget ul>li>a:hover{
-    color: black
+    color: gray;
    
 }
 .footer-widget-holder{
@@ -189,5 +190,136 @@ display: inline-block;
     border: 1px solid gainsboro;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  body {
+    display: flex;
+    
+    justify-content: flex-end;
+    align-items: flex-end;
+    min-height: 100vh;
+  }
+  
+  .footer {
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .social-icon,
+  .menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+  }
+  
+  .social-icon__item,
+  .menu__item {
+    list-style: none;
+  }
+  
+  .social-icon__link {
+    font-size: 2rem;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+  }
+  .social-icon__link:hover {
+    transform: translateY(-10px);
+  }
+  
+  .menu__link {
+    font-size: 1.2rem;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+    font-weight: 300;
+  }
+  
+  .menu__link:hover {
+    opacity: 1;
+  }
+  
+  .footer p {
+    color: #fff;
+    margin: 15px 0 10px 0;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  
+  .wave {
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url("https://i.ibb.co/wQZVxxk/wave.png");
+    background-size: 1000px 100px;
+  }
+  
+  .wave#wave1 {
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+    animation: animateWaves 4s linear infinite;
+  }
+  
+  .wave#wave2 {
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animate 4s linear infinite !important;
+  }
+  
+  .wave#wave3 {
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWaves 3s linear infinite;
+  }
+  
+  .wave#wave4 {
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animate 3s linear infinite;
+  }
+  
+  @keyframes animateWaves {
+    0% {
+      background-position-x: 1000px;
+    }
+    100% {
+      background-positon-x: 0px;
+    }
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position-x: -1000px;
+    }
+    100% {
+      background-positon-x: 0px;
+    }
+  }
+  
 
 
